@@ -423,6 +423,7 @@ _bmc_info(pstdout_state_t pstate,
   int exit_code = -1;
 
   prog_data = (bmc_info_prog_data_t *)arg;
+  memset(&state_data, '\0', sizeof(bmc_info_state_data_t));
   
   if (!(dev = ipmi_device_open(prog_data->progname,
                                hostname,
@@ -438,7 +439,6 @@ _bmc_info(pstdout_state_t pstate,
       goto cleanup;
     }
 
-  memset(&state_data, '\0', sizeof(bmc_info_state_data_t));
   state_data.dev = dev;
   state_data.prog_data = prog_data;
   state_data.pstate = pstate;
