@@ -1278,6 +1278,7 @@ _ipmi_chassis (pstdout_state_t pstate,
   int exit_code = -1;
 
   prog_data = (ipmi_chassis_prog_data_t *)arg;
+  memset(&state_data, '\0', sizeof(ipmi_chassis_state_data_t));
 
   if (!(dev = ipmi_device_open(prog_data->progname,
                                hostname,
@@ -1293,7 +1294,6 @@ _ipmi_chassis (pstdout_state_t pstate,
       goto cleanup;
     }
 
-  memset(&state_data, '\0', sizeof(ipmi_chassis_state_data_t));
   state_data.dev = dev;
   state_data.prog_data = prog_data;
   state_data.pstate = pstate;
