@@ -352,6 +352,7 @@ _ipmi_sel (pstdout_state_t pstate,
   int exit_code = -1;
 
   prog_data = (ipmi_sel_prog_data_t *)arg;
+  memset(&state_data, '\0', sizeof(ipmi_sel_state_data_t));
 
   if (!(dev = ipmi_device_open(prog_data->progname,
                                hostname,
@@ -367,7 +368,6 @@ _ipmi_sel (pstdout_state_t pstate,
       goto cleanup;
     }
  
-  memset(&state_data, '\0', sizeof(ipmi_sel_state_data_t));
   state_data.dev = dev;
   state_data.prog_data = prog_data;
   state_data.pstate = pstate;
